[tool.poetry]
name = "reddit_vk_poster"
version = "0.1.0"
description = ""
authors = ["Neykuratick <neykuratick@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
